--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="style.css">
  </head>
  <body>
-    <h1>
-        Progress bar
-    </h1>
+   <div class="container">
+    <div class="progress-container">
+        <div class="progress" id="progress"></div>
+        <div class="circle active"> 1 </div>
+        <div class="circle"> 2 </div>
+        <div class="circle"> 3 </div>
+        <div class="circle"> 4 </div>
+        <div class="circle"> 5 </div>
+    </div>
+    <button class="btn" id="prev" disabled>Prev</button>
+    <button class="btn" id="next">Next</button>
+   </div>
     <script src="index.js"></script>
  </body>
  </html>
